Reduce
Java 10